[project]
name = "image-host"
version = "0.1.0"
description = "Basically imgur"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.10",
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "aioboto3>=13.2.0",
    "pydantic-settings>=2.10.1",
]
license = { file = "LICENSE" }
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[dependency-groups]
type-check = [
    "boto3-stubs[s3]>=1.40.30",
    "pyright>=1.1.405",
]
